chore: fixed repo name in some files

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "action-entitled-actor",
+  "name": "action-authorised-actor",
   "version": "0.0.0",
-  "description": "Execute a GitHub Action only if the (triggering) actor is authorised (=authorised) to do so.",
+  "description": "Execute a GitHub Action only if the (triggering) actor is authorised to do so.",
   "author": {
     "name": "Stefan Natter",
     "url": "https://natterstefan.me>"
@@ -26,12 +26,12 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/natterstefan/action-entitled-actor.git"
+    "url": "git+https://github.com/natterstefan/action-authorised-actor.git"
   },
   "bugs": {
-    "url": "https://github.com/natterstefan/action-entitled-actor./issues"
+    "url": "https://github.com/natterstefan/action-authorised-actor./issues"
   },
-  "homepage": "https://github.com/natterstefan/action-entitled-actor.#readme",
+  "homepage": "https://github.com/natterstefan/action-authorised-actor.#readme",
   "keywords": [
     "github-action",
     "github-action-permissions"
